# FutDbRs

./: Cargo.toml  README.md
src/: fut_api.rs  leagues.rs  main.rs  mime_type.rs  request.rs
src/batch/Clubs/: clubs.rs
src/clubs/: get_clubs.rs  mod.rs  model_club.rs
src/clubs/all_clubs/: get_clubs.rs  mod.rs
src/clubs/club_image/: get_club_image.rs
src/clubs/specific_club/: get_club.rs  mod.rs  model_club.rs
src/fut_api/: nations.rs  players.rs
src/fut_api/clubs/: all_clubs.rs  club_image.rs  specific_club.rs
src/fut_api/clubs/all_clubs/: get_clubs.rs
src/fut_api/clubs/specific_club/: get_club.rs
src/fut_api/leagues/: all_leagues.rs
src/fut_api/leagues/all_leagues/: get_leagues.rs  model_leagues.rs
src/fut_api/leagues/specific_league/: get_league.rs  model_league.rs
src/fut_api/nations/: specific_nation.rs
src/fut_api/nations/all_nations/: get_nations.rs  model_nations.rs
src/fut_api/nations/specific_nation/: get_nation.rs  model_nation.rs
src/fut_api/players/: all_players.rs
src/fut_api/players/all_players/: get_players.rs  model_players.rs
src/fut_api/players/specific_player/: get_player.rs
src/leagues/: mod.rs  specific_league.rs
src/leagues/all_leagues/: get_leagues.rs  mod.rs
src/leagues/specific_league/: get_league.rs  mod.rs
src/nations/all_nations/: get_nations.rs  mod.rs
src/nations/specific_nation/: get_nation.rs
src/players/all_players/: get_players.rs
src/players/specific_player/: get_player.rs  mod.rs  model_player.rs
